[gd_scene load_steps=17 format=2]

[ext_resource path="res://StateMachine.gd" type="Script" id=1]
[ext_resource path="res://CountDownState.gd" type="Script" id=2]
[ext_resource path="res://flappy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://PlayState.gd" type="Script" id=4]
[ext_resource path="res://explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://ScoreState.gd" type="Script" id=7]
[ext_resource path="res://medium_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://TitleScreenState.gd" type="Script" id=9]
[ext_resource path="res://Parallax.gd" type="Script" id=10]
[ext_resource path="res://background.png" type="Texture" id=11]
[ext_resource path="res://ground.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]

size = 56
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 28
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 28
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 14
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameState" type="Node" index="0"]

script = ExtResource( 1 )

[node name="CountDownState" type="Node" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="CountDownScreen" type="Node2D" parent="CountDownState" index="0"]

[node name="CountDown" type="Label" parent="CountDownState/CountDownScreen" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 248.0
margin_top = 119.0
margin_right = 264.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Timer" type="Timer" parent="CountDownState/CountDownScreen" index="1"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="PlayState" type="Node" parent="." index="1"]

editor/display_folded = true
script = ExtResource( 4 )

[node name="Explosion" type="AudioStreamPlayer" parent="PlayState" index="0"]

stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hurt" type="AudioStreamPlayer" parent="PlayState" index="1"]

stream = ExtResource( 6 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ScoreState" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 7 )

[node name="ScoreScreen" type="Node2D" parent="ScoreState" index="0"]

visible = false

[node name="Lost" type="Label" parent="ScoreState/ScoreScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = 68.0
margin_right = 347.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Oof! You lost!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Score" type="Label" parent="ScoreState/ScoreScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = 130.0
margin_right = 274.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
text = "Score: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label" type="Label" parent="ScoreState/ScoreScreen" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_top = 161.0
margin_right = 342.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
text = "Press ENTER to Play Again!
or 'ESC' to exit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TitleScreenState" type="Node" parent="." index="3"]

editor/display_folded = true
script = ExtResource( 9 )

[node name="TitleScreen" type="Node2D" parent="TitleScreenState" index="0"]

visible = false

[node name="Title" type="Label" parent="TitleScreenState/TitleScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 188.0
margin_top = 93.0
margin_right = 316.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "FiftyBird"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_fonts" ]

[node name="SubTitle" type="Label" parent="TitleScreenState/TitleScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 130.0
margin_right = 327.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Press 'Enter' to play"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Parallax" type="ParallaxBackground" parent="." index="4"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
script = ExtResource( 10 )

[node name="Background" type="ParallaxLayer" parent="Parallax" index="0"]

motion_scale = Vector2( 0.5, 0 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 826, 0 )
_sections_unfolded = [ "Motion", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="background" type="TextureRect" parent="Parallax/Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1157.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
stretch_mode = 0

[node name="Gamelayer" type="ParallaxLayer" parent="Parallax" index="1"]

motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Ground" type="ParallaxLayer" parent="Parallax" index="2"]

motion_scale = Vector2( 1, 0 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1096, 0 )
_sections_unfolded = [ "Motion", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ground" type="TextureRect" parent="Parallax/Ground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 272.0
margin_right = 1101.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[connection signal="timeout" from="CountDownState/CountDownScreen/Timer" to="CountDownState" method="_on_Timer_timeout"]


